<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFF"
    android:padding="10dp">


     <TextView
         android:id="@+id/tvSignUpTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/alexandriabold"
         android:gravity="center"
         android:text="Sign Up"
         android:textColor="#4F576B"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />

     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnNext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginTop="656dp"
         android:background="@drawable/pink_pill"
         android:fontFamily="@font/alexandriasemibold"
         android:text="Next"
         android:textColor="#FBFBFF"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.7"
         tools:ignore="HardcodedText,VisualLintButtonSize" />

     <TextView
         android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="@font/alexandriaregular"
         android:text="Already have an account? Login"
         android:textAlignment="center"
         android:textColor="#A9A9A9"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnNext"
         tools:ignore="HardcodedText,TextContrastCheck,TouchTargetSizeCheck" />

     <EditText
         android:id="@+id/etAge"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="412dp"
         android:background="@drawable/edittext_outline"
         android:hint="Age"
         android:fontFamily="@font/alexandriaregular"
         android:textColor="#4F576B"
         android:padding="11dp"
         android:textColorHint="#A9A9A9"
         app:layout_constraintBottom_toTopOf="@+id/CityTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.046"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.43"
         tools:ignore="Autofill,HardcodedText,MissingConstraints,TextFields,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

     <TextView
         android:id="@+id/AgeTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="372dp"
         android:fontFamily="@font/alexandriasemibold"
         android:text="Age"
         android:textColor="#4F576B"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/etAge"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.071"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.925"
         tools:ignore="HardcodedText" />

     <TextView
         android:id="@+id/GenderTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alexandriasemibold"
         android:text="Gender"
         android:textColor="#4F576B"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/textInputLayout1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.598"
         app:layout_constraintStart_toEndOf="@+id/AgeTitle"
         app:layout_constraintTop_toBottomOf="@+id/etLastName"
         app:layout_constraintVertical_bias="0.448"
         tools:ignore="HardcodedText" />

     <EditText
         android:id="@+id/etStreet"
         android:layout_width="108dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="504dp"
         android:background="@drawable/edittext_outline"
         android:hint="Street"
         android:padding="11dp"
         android:fontFamily="@font/alexandriaregular"
         android:textColor="#4F576B"
         android:scrollHorizontally="true"
         android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@+id/btnNext"
         app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.612"
         tools:ignore="Autofill,HardcodedText,MissingConstraints,NotSibling,TextFields,TouchTargetSizeCheck,VisualLintOverlap" />

     <TextView
         android:id="@+id/StreetTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="268dp"
         android:fontFamily="@font/alexandriasemibold"
         android:text="Street"
         android:textColor="#4F576B"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/etStreet"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.912"
         tools:ignore="HardcodedText" />

     <TextView
         android:id="@+id/CityTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alexandriasemibold"
         android:text="City"
         android:textColor="#4F576B"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.071"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout1"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="436dp"
         android:textColorHint="#A9A9A9"
         app:endIconMode="dropdown_menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.686"
         app:layout_constraintStart_toEndOf="@id/etAge"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText,MissingConstraints">

         <AutoCompleteTextView
             android:id="@+id/spinnerGender"
             android:layout_width="149dp"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_outline"
             android:hint="Gender"
             android:fontFamily="@font/alexandriaregular"
             android:textColor="#4F576B"
             android:inputType="none"
             android:padding="11dp"
             android:textColorHint="#A9A9A9"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
     </com.google.android.material.textfield.TextInputLayout>

     <TextView
         android:id="@+id/LastNameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:fontFamily="@font/alexandriasemibold"
         android:text="Last Name"
         android:textColor="#4F576B"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/etLastName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.082"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />

     <EditText
         android:id="@+id/etLastName"
         android:layout_width="354dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:background="@drawable/edittext_outline"
         android:fontFamily="@font/alexandriaregular"
         android:textColor="#4F576B"
         android:hint="Last Name"
         android:padding="11dp"
         android:textColorHint="#A9A9A9"
         app:layout_constraintBottom_toTopOf="@+id/AgeTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="Autofill,DuplicateSpeakableTextCheck,HardcodedText,MissingConstraints,TextFields,TouchTargetSizeCheck" />

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout2"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="111dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="500dp"
         android:hint="City"
         android:textColorHint="#A9A9A9"

         app:endIconMode="dropdown_menu"
         app:layout_constraintBottom_toTopOf="@+id/btnNext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.042"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.605"
         tools:ignore="HardcodedText,MissingConstraints">

         <AutoCompleteTextView
             android:id="@+id/spinnerCity"
             android:layout_width="111dp"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_outline"
             android:inputType="none"
             android:padding="11dp"
             android:fontFamily="@font/alexandriaregular"
             android:textColor="#4F576B"
             android:scrollHorizontally="true"
             android:singleLine="true"
             android:textColorHint="#A9A9A9"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />
     </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout3"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="112dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="500dp"
         android:hint="Area"
         android:textColorHint="#A9A9A9"
         app:endIconMode="dropdown_menu"
         app:layout_constraintBottom_toTopOf="@+id/btnNext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.61"
         tools:ignore="HardcodedText,MissingConstraints">

         <AutoCompleteTextView
             android:id="@+id/spinnerarea"
             android:layout_width="112dp"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_outline"
             android:inputType="none"
             android:padding="11dp"
             android:scrollHorizontally="true"
             android:singleLine="true"
             android:fontFamily="@font/alexandriaregular"
             android:textColor="#4F576B"
             android:textColorHint="#A9A9A9"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

     </com.google.android.material.textfield.TextInputLayout>

     <EditText
         android:id="@+id/etFirstName"
         android:layout_width="354dp"
         android:layout_height="wrap_content"
         android:background="@drawable/edittext_outline"
         android:hint="First Name"
         android:padding="11dp"
         android:fontFamily="@font/alexandriaregular"
         android:textColor="#4F576B"
         android:textColorHint="#A9A9A9"
         app:layout_constraintBottom_toTopOf="@+id/LastNameTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSignUpTitle"
         app:layout_constraintVertical_bias="0.821"
         tools:ignore="Autofill,HardcodedText,TextFields,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

     <TextView
         android:id="@+id/FirstNameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alexandriasemibold"
         android:text="First Name"
         android:textColor="#4F576B"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/etFirstName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.083"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSignUpTitle"
         app:layout_constraintVertical_bias="0.975"
         tools:ignore="HardcodedText" />

     <com.example.petto.SignUpProgressBar
         android:id="@+id/progressBar"
         android:layout_width="362dp"
         android:layout_height="16dp"
         android:layout_marginTop="32dp"
         app:layout_constraintBottom_toTopOf="@+id/FirstNameTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvSignUpTitle"
         app:layout_constraintVertical_bias="0.2"
         tools:ignore="TextSizeCheck" />

     <TextView
         android:id="@+id/AreaTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="144dp"
         android:fontFamily="@font/alexandriasemibold"
         android:text="Area"
         android:textColor="#4F576B"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etLastName"
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />


 </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
