...
                <Space android:layout_width="40dp" android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textSize="16sp"
                    android:textColor="#4F576B"
                    android:fontFamily="@font/alexandriamedium"
                    android:drawableStart="@drawable/female"
                    android:drawablePadding="8dp" />
            </LinearLayout>
...
